--- a/source/404.html
+++ b/source/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+ï»¿<!DOCTYPE HTML>
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8;"/>
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="your site url " homePageName="»Øµ½ÎÒµÄÖ÷Ò³"></script>
+<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="your site url " homePageName="å›žåˆ°æˆ‘çš„ä¸»é¡µ"></script>
 
 </body>
 </html>
